[package]
name = "hppr"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.7.0"
bevy_asset_loader = { version = "0.11.0", features = [
    "2d",
    "stageless",
] }
bevy_ecs_ldtk = "0.3.0"
bevy_ecs_tilemap = "0.6.0"
heron = { version = "3.1.0", features = ["2d"] }
iyes_loopless = "0.5.1"